finally fix the pages link

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <h1>ASTRO-COVER</h1>
         <p>Discover the universe</p>
         <img src="../astro-cover.png" alt="banner">
-        <a href="../My-astro-cover-website/about.html">About</a>
-        <a href="../My-astro-cover-website/Study-dream.html">Study-dream</a>
-        <a href="../My-astro-cover-website/Dua.art.html">Dua.art portfolio</a>
+        <a href="../about.html">About</a>
+        <a href="../Study-dream.html">Study-dream</a>
+        <a href="../Dua.art.html">Dua.art portfolio</a>
     </body>
 </html>
