--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <a href="../about.html">About</a>
         <a href="../Study-dream.html">Study-dream</a>
         <a href="../Dua.art.html">Dua.art portfolio</a>
-        <a href="../My-astro-cover-website/recipes-homepage.html">recipes-homepage</a>
+        <a href="../recipes-homepage.html">recipes-homepage</a>
     </body>
 </html>
