fix recipes link

--- a/recipes-homepage.html
+++ b/recipes-homepage.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-        <li><a href="../My-astro-cover-website/pasta.html">Pasta</a></li>
-        <li><a href="../My-astro-cover-website/tiramisu.html">Tiramisu</a></li>
-        <li><a href="../My-astro-cover-website/shawarma.html">Shawarma</a></li>
+        <li><a href="../pasta.html">Pasta</a></li>
+        <li><a href="../tiramisu.html">Tiramisu</a></li>
+        <li><a href="../shawarma.html">Shawarma</a></li>
         </ul>
     </body>
 </html>
