fix images link

--- a/tiramisu.html
+++ b/tiramisu.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Tiramisu</h1>
-        <img src="../My-astro-cover-website/intro-1656436480.jpeg" alt="Tiramisu">
+        <img src="../intro-1656436480.jpeg" alt="Tiramisu">
         <h2>Description</h2>
         <p>This is my version of <em>Italian</em> no-bake Tiramisu with espresso dipped <strong>Ülker</strong> tea biscuits and a homemade cream mix topped with some cocoa powder.
             This is the most amazing dessert with it's beautiful layers and sweet, fluffy taste.</p>
